--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -15,6 +15,8 @@ body, textarea, select, input, button {
   margin: 0 auto;
 }
 
+// 网易云音乐里面大量的使用了精灵图，图片的引用直接通过下面的类名就行了
+// 再要使用精灵图片的地方，引入类名，然后重新设置 background-position 背景图片位置就ok了
 .sprite_01 {
   background: url(../img/sprite_01.png) no-repeat 0 9999px;
 }
@@ -57,4 +59,21 @@ body, textarea, select, input, button {
 
 .sprite_playlist {
   background: url(../img/playlist_sprite.png) no-repeat 0 9999px;
+}
+
+// 单行文本溢出
+.ellipsis-text-1 {
+  overflow: hidden;
+  word-wrap: normal;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+// 双行文本溢出
+.ellipsis-text-2 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
