--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -1,4 +1,8 @@
-body, textarea, select, input, button {
+body,
+textarea,
+select,
+input,
+button {
   font-size: 12px;
   color: #333;
   font-family: Arial, Helvetica, sans-serif;
@@ -76,4 +80,16 @@ body, textarea, select, input, button {
   display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+}
+
+.ant-message {
+  height: 100vh;
+  .ant-message-notice-content {
+    position: fixed;
+    left: 50%;
+    bottom: 60px;
+    transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.7) !important;
+    color: #fff;
+  }
 }
